<resources>
    <string name="app_name">Night Sky Guide</string>
    <string name="action_settings">Settings</string>
    <string name="invalid_query_uri">Invalid query Uri:</string>
    <string name="insert_failed">Insert failed: s</string>
    <string name="invalid_insert_uri">Invalid insert Uri:</string>
    <string name="invalid_update_uri">Invalid update Uri:</string>
    <string name="invalid_delete_uri">Invalid delete Uri:</string>
    <string name="menuitem_edit">Edit</string>
    <string name="menuitem_add">Add</string>
    <string name="menuitem_delete">Delete</string>
    <string name="menuitem_location">Update Location</string>
    <string name="menuitem_info">App Info</string>
    <string name="menuitem_search">Search</string>
    <string name="hint_objectid_required">Object ID (Required)</string>
    <string name="hint_type">Type</string>
    <string name="hint_mag">Magnitude</string>
    <string name="hint_size">Size (arcmins)</string>
    <string name="hint_dist">Distance</string>
    <string name="hint_RA">RA (ddd.ddd)</string>
    <string name="hint_dec">DEC (ddd.ddd)</string>
    <string name="hint_const">Constellation</string>
    <string name="hint_name">Common Name</string>
    <string name="hint_psa">PSA Page(s)</string>
    <string name="hint_oith">OITH Page(s)</string>
    <string name="hint_skyatlas">Sky Atlas</string>
    <string name="hint_observed">Observed (0/1)</string>
    <string name="label_objectid">Object ID:</string>
    <string name="label_catalogue">Catalogue:</string>
    <string name="label_type">Type:</string>
    <string name="label_mag">Magnitude:</string>
    <string name="label_size">Size:</string>
    <string name="label_dist">Distance:</string>
    <string name="label_dblmag">Dbl Magnitudes:</string>
    <string name="label_dblsep">Dbl Separation:</string>
    <string name="label_dblangle">Dbl Pos Angle:</string>
    <string name="label_dblyear">Dbl Year:</string>
    <string name="label_RA">RA:</string>
    <string name="label_dec">DEC:</string>
    <string name="label_const">Constellation:</string>
    <string name="label_name">Common Name:</string>
    <string name="label_psa">Pocket Sky Atlas:</string>
    <string name="label_oith">OITH Fieldbook:</string>
    <string name="label_skyatlas">Sky Atlas 2000:</string>
    <string name="label_turnleft">Turn Left/Orion:</string>
    <string name="label_observed">Observed:</string>
    <string name="label_alt">Altitude:</string>
    <string name="label_az">Azimuth:</string>
    <string name="label_rise">Rise Time:</string>
    <string name="label_set">Set Time:</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_app_info">AppInfoActivity</string>
    <string name="title_activity_location">LocationActivity</string>
    <string name="default_latitude">31.9601</string>
    <string name="default_longitude">-111.5982</string>
    <string name="hint_date">Date</string>
    <string name="hint_location">Location</string>
    <string name="hint_seeing">Seeing</string>
    <string name="hint_transparency">Transparency</string>
    <string name="hint_telescope">Telescope</string>
    <string name="hint_eyepiece">Eyepiece</string>
    <string name="hint_power">Power/Magnification</string>
    <string name="hint_filter">Filter</string>
    <string name="hint_notes">Observation Notes</string>
    <string name="pref_show_observed">Display previously observed</string>
    <string name="pref_display_below_horizon">Display objects below horizon</string>
    <string name="pref_max_magintude">Maximum magnitude to display:</string>
    <string name="loc_current_title">VIEWING LOCATION:</string>
    <string name="loc_current_lat_title">Latitude</string>
    <string name="loc_current_long_title">Longitude</string>
    <string name="loc_current_lat_label">Latitude (dd.dddd):</string>
    <string name="loc_current_long_label">Longitude +E/-W (dd.dddd):</string>
    <string name="menuitem_settings">Settings</string>
    <string name="location_default">Kitt Peak</string>
    <string name="location_null"></string>
    <string name="pref_loc_title">Location</string>
    <string name="pref_loc_label_req">Location (required)</string>
    <string name="pref_loc_label">Location (blank for null)</string>
    <string name="pref_checkbox">pref_checkbox</string>
    <string name="title_activity_observations">Observation Log</string>
    <string name="hint_time">Time</string>
    <string name="label_date">Date:</string>
    <string name="label_location">Location:</string>
    <string name="menuitem_logbook">Logbook</string>
    <string name="export_csv">Export Log to CSV</string>
    <string name="hint_objectID">Object ID</string>
    <string name="menuitem_credits">Credits</string>
    <string name="title_settings">Settings</string>
    <string name="hint_app_info_image">Viewing Tips</string>
    <string name="label_transit">Transit Time:</string>
    <string name="hint_catalogue">Catalogue</string>
    <string name="hint_obs_program">AL Observation Program</string>
</resources>
