<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/dso_search"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="1"
        android:title="@string/menuitem_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/settings_edit"
        android:enabled="true"
        android:icon="@drawable/ic_settings"
        android:orderInCategory="1"
        android:title="@string/menuitem_settings"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/observations_fragment"
        android:enabled="true"
        android:icon="@drawable/ic_logbook"
        android:orderInCategory="2"
        android:title="@string/menuitem_logbook"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/app_info"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_info_details"
        android:orderInCategory="3"
        android:title="@string/menuitem_info"
        app:showAsAction="ifRoom" />

    <!-- <item
        android:id="@+id/app_credits"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_info_details"
        android:orderInCategory="4"
        android:title="@string/menuitem_credits"
        app:showAsAction="never" /> -->

</menu>