<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:useDefaultMargins="true">

        <TextView
        android:id="@+id/objectIdLabelTextView"
        android:text="@string/label_objectid"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/DSObjectLabelTextView" />

        <TextView
            android:id="@+id/objectIdTextView"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/DSObjectTextView"/>

        <TextView
            android:id="@+id/typeLabelTextView"
            android:text="@string/label_type"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/DSObjectLabelTextView" />

        <TextView
            android:id="@+id/typeTextView"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/DSObjectTextView"/>

        <TextView
            android:id="@+id/magLabelTextView"
            android:text="@string/label_mag"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/DSObjectLabelTextView" />

        <TextView
            android:id="@+id/magTextView"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/DSObjectTextView"/>

        <TextView
            android:id="@+id/sizeLabelTextView"
            android:text="@string/label_size"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/DSObjectLabelTextView" />

        <TextView
            android:id="@+id/sizeTextView"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/DSObjectTextView"/>

        <TextView
            android:id="@+id/distLabelTextView"
            android:text="@string/label_dist"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/DSObjectLabelTextView" />

        <TextView
            android:id="@+id/distTextView"
            android:layout_row="4"
            android:layout_column="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/DSObjectTextView"/>

        <TextView
            android:id="@+id/raLabelTextView"
            android:text="@string/label_RA"
            android:layout_row="5"
            android:layout_column="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/DSObjectLabelTextView" />

        <TextView
            android:id="@+id/raTextView"
            android:layout_row="5"
            android:layout_column="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/DSObjectTextView"/>

        <TextView
            android:id="@+id/decLabelTextView"
            android:text="@string/label_dec"
            android:layout_row="6"
            android:layout_column="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/DSObjectLabelTextView" />

        <TextView
            android:id="@+id/decTextView"
            android:layout_row="6"
            android:layout_column="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/DSObjectTextView"/>

        <TextView
            android:id="@+id/constLabelTextView"
            android:text="@string/label_const"
            android:layout_row="7"
            android:layout_column="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/DSObjectLabelTextView" />

        <TextView
            android:id="@+id/constTextView"
            android:layout_row="7"
            android:layout_column="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/DSObjectTextView"/>

        <TextView
            android:id="@+id/nameLabelTextView"
            android:text="@string/label_name"
            android:layout_row="8"
            android:layout_column="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/DSObjectLabelTextView" />

        <TextView
            android:id="@+id/nameTextView"
            android:layout_row="8"
            android:layout_column="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/DSObjectTextView"/>

        <TextView
            android:id="@+id/psaLabelTextView"
            android:text="@string/label_psa"
            android:layout_row="9"
            android:layout_column="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/DSObjectLabelTextView" />

        <TextView
            android:id="@+id/psaTextView"
            android:layout_row="9"
            android:layout_column="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/DSObjectTextView"/>

        <TextView
            android:id="@+id/oithLabelTextView"
            android:text="@string/label_oith"
            android:layout_row="10"
            android:layout_column="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/DSObjectLabelTextView" />

        <TextView
            android:id="@+id/oithTextView"
            android:layout_row="10"
            android:layout_column="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/DSObjectTextView"/>

        <TextView
            android:id="@+id/observedLabelTextView"
            android:text="@string/label_observed"
            android:layout_row="11"
            android:layout_column="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/DSObjectLabelTextView" />

        <TextView
            android:id="@+id/observedTextView"
            android:layout_row="11"
            android:layout_column="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/DSObjectTextView"/>

    </GridLayout>

</ScrollView>