<!-- *** Suspend all database add/edit/delete capabilities
     *** Changed to "Mark as plain text" to disable XML
     *** Select "Mark as XML" (right click on file) to undo
-->
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/objectIdTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/objectIdEditText"
                    android:hint="@string/hint_objectid_required"
                    android:inputType="textCapCharacters"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:imeOptions="actionNext" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/typeTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/typeEditText"
                    android:hint="@string/hint_type"
                    android:inputType="textCapCharacters"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:imeOptions="actionNext" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/magTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/magEditText"
                    android:hint="@string/hint_mag"
                    android:inputType="numberDecimal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:imeOptions="actionNext" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/sizeTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/sizeEditText"
                    android:hint="@string/hint_size"
                    android:inputType="text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:imeOptions="actionNext" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/distTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/distEditText"
                    android:hint="@string/hint_dist"
                    android:inputType="text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:imeOptions="actionNext" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/raTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/raEditText"
                    android:hint="@string/hint_RA"
                    android:inputType="numberDecimal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:imeOptions="actionNext" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/decTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/decEditText"
                    android:hint="@string/hint_dec"
                    android:inputType="numberDecimal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:imeOptions="actionNext" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/constTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/constEditText"
                    android:hint="@string/hint_const"
                    android:inputType="textCapCharacters"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:imeOptions="actionNext" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/nameTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/nameEditText"
                    android:hint="@string/hint_name"
                    android:inputType="textCapWords"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:imeOptions="actionNext" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/psaTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/psaEditText"
                    android:hint="@string/hint_psa"
                    android:inputType="text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:imeOptions="actionNext" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/oithTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/oithEditText"
                    android:hint="@string/hint_oith"
                    android:inputType="text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:imeOptions="actionNext" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/observedTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/observedEditText"
                    android:hint="@string/hint_observed"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:imeOptions="actionDone" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:fabSize="mini"
        android:src="@drawable/ic_save_24dp"
        android:id="@+id/saveFloatingActionButton"
        android:layout_gravity="end"
        android:layout_margin="@dimen/fab_margin" />

</FrameLayout>