<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:useDefaultMargins="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/Section1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent">

                <TextView
                    android:id="@+id/objectIdObsTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:padding="@dimen/divider_margin"
                    android:textSize="30sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/Section1"
                android:paddingTop="@dimen/activity_vertical_margin">

                <!-- Date -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@string/hint_date" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:paddingBottom="@dimen/text_margin"
                    android:id="@+id/obsDateText"/>

                <!-- Location -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@string/hint_location" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:paddingBottom="@dimen/text_margin"
                    android:id="@+id/obsLocationText"/>

                <!-- Seeing -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@string/hint_seeing" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:paddingBottom="@dimen/text_margin"
                    android:id="@+id/obsSeeingText"/>


                <!-- Transparency -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@string/hint_transparency" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:paddingBottom="@dimen/text_margin"
                    android:id="@+id/obsTransparencyText"/>


                <!-- Telescope -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@string/hint_telescope" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:paddingBottom="@dimen/text_margin"
                    android:id="@+id/obsTelescopeText"/>


                <!-- Eyepiece -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@string/hint_eyepiece" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:paddingBottom="@dimen/text_margin"
                    android:id="@+id/obsEyepieceText"/>


                <!-- Power -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@string/hint_power" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:paddingBottom="@dimen/text_margin"
                    android:id="@+id/obsPowerText"/>


                <!-- Filter -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@string/hint_filter" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:paddingBottom="@dimen/text_margin"
                    android:id="@+id/obsFilterText"/>


                <!-- Notes -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@string/hint_notes" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:paddingBottom="@dimen/text_margin"
                    android:id="@+id/obsNotesText"/>

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</FrameLayout>