<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/content_location"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.mikesrv9a.nightskyguide.LocationActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:useDefaultMargins="true">

        <TextView
            android:id="@+id/textView_viewing_loc"
            style="@style/LocCategoryTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loc_current_title" />

        <TextView
            android:id="@+id/textView_viewing_lat_label"
            style="@style/LocLabelTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loc_current_lat_label" />

        <TextView
            android:id="@+id/textView_viewing_long_label"
            style="@style/LocLabelTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loc_current_long_label" />

    </LinearLayout>




</ScrollView>